--- a/2 Theorie/2.1.2 Häusliche Gewalt.tex
+++ b/2 Theorie/2.1.2 Häusliche Gewalt.tex
@@ -26,7 +26,7 @@ Die soziale Gewalt wird vom \textcite{Def_Form_Folge_Gewalt} als Bestandteil der
 % ökonomische Gewalt
 Wie auch die soziale Gewalt, wird die ökonomische Gewalt vom \textcite{Def_Form_Folge_Gewalt} als Unterkategorie der psychischen Gewalt gezählt. Müssen sich die Opfer wiederholt Vorwürfe der fehlerhaften bzw. nicht ausreichenden Fähigkeiten ihren Beruf, den Haushalt oder die Erziehung der eigenen Kinder auszuüben, anhören, erzeugt dies große psychische Belastungen \parencite{Def_haus_Gewalt_2}. Es wird ihnen untersagt einem Beruf nachzugehen, oder sie müssen die Erwerbe an den Partner abgeben, so dass er der einzige ist, der Macht und Kontrolle über die Finanzen hat \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Dadurch sind die Betroffenen finanziel von ihren Partnern abhängig \parencite{physische_Gewalt_wie_aggro}. Damit die Gewalt von der Öffentlichkeit nicht erkennbar ist, werden den Betroffenen teure Geschenke überreicht. Dies stärkt die Unsicherheit und Bedenken den Partner zu verlassen, weil schwere finanzielle Folgen befürchtet werden \parencite{Übergang_psy_zu_sex_Gewalt}.
 
-In Anlehung and das \textit{Rad der Gewalt} von \textcite{Rad_der_Gewalt} sind in Anhang A in Abbildung~\ref{Rad der Gewalt} die fünf Gewaltarten nochmal zusammenfassend bildlich dargestellt. %how to reference Anhang?
+%In Anlehung and das \textit{Rad der Gewalt} von \textcite{Rad_der_Gewalt} sind %in Anhang A in Abbildung~\ref{Rad der Gewalt} die fünf Gewaltarten nochmal %zusammenfassend bildlich dargestellt. %how to reference Anhang?
 
 % URSACHE + KREISLAUF DER GEWALT
 \subsubsection{Ursachen und Aufrechterhaltung von Gewalt}     \label{2.1.2.2}
