--- a/2 Theorie/2.1.3 Gewaltmythen.tex
+++ b/2 Theorie/2.1.3 Gewaltmythen.tex
@@ -1,5 +1,5 @@
 \subsection{Gewaltmythen}   \label{subsec_2.1.3}
-Die Art und Weise, wie Opfer wahrgenommen werden, spielt eine große Rolle für die gesellschaftliche und die eigene Reaktion auf häusliche Gewalt. Ob und wie die Öffentlichkeit und das Opfer auf einen Fall von häuslicher Gewalt reagiert, hängt stark von gesellschaftlichen Wahrnehmung und Einstellung diesem Thema gegenüber ab \parencite{Labelingtheory_plus}. Diese Einstellungen werden von stereotypischen Vorstellungen über häusliche Gewalt geprägt. \textcite{DVMAS_Peters} nennt diese falschen Einstellungen und Vorstellungen Mythen häuslicher Gewalt, die die Schwere physische Aggression versuchen zu verringern, abzustreiten oder versuchen Rechtfertigungsgründe dafür vorzubringen. Mythen häuslicher Gewalt senken die soziale Hilfestellung. Durch sie verändert sich die gewaltbetroffene Person von einem unschuldigen Opfer zu einer Person, die es bewusst oder unbewusst wollte, misshandelt zu werden. Demzufolge ist das Opfer kein Opfer mehr, denn die Person hätte die Gewalt vermeiden können, oder hat den Partner provoziert \parencite{DVMAS_Peters}.
+Die Art und Weise, wie Opfer wahrgenommen werden, spielt eine große Rolle für die gesellschaftliche und die eigene Reaktion auf häusliche Gewalt. Ob und wie die Öffentlichkeit und das Opfer auf einen Fall von häuslicher Gewalt reagiert, hängt stark von gesellschaftlichen Wahrnehmung und Einstellung diesem Thema gegenüber ab \parencite{Labelingtheory_plus}. Diese Einstellungen werden von stereotypischen Vorstellungen über häusliche Gewalt geprägt. \textcite{DVMAS_Peters} nennt diese falschen Einstellungen und Vorstellungen \textit{Mythen häuslicher Gewalt}, die die Schwere physische Aggression versuchen zu verringern, abzustreiten oder versuchen Rechtfertigungsgründe dafür vorzubringen. Mythen häuslicher Gewalt senken die soziale Hilfestellung. Durch sie verändert sich die gewaltbetroffene Person von einem unschuldigen Opfer zu einer Person, die es bewusst oder unbewusst wollte, misshandelt zu werden. Demzufolge ist das Opfer kein Opfer mehr, denn die Person hätte die Gewalt vermeiden können, oder hat den Partner willentlich provoziert \parencite{DVMAS_Peters}. Durch ein solches Bild von Opfern häuslicher Gewalt wird das Verhalten der Täter begünstigen, da die Schwere der Tat minimiert wird. Des Weiteren prägen sie, wie zu Beginn des Kapitels bereits angedeutet, auch das Opfer. Einer der gefährlichen Lage unverständlich eingestellten Gesellschaft, macht es den Opfern schwer, Hilfe bei Familie, Nachbarn oder öffentlichen Institutionen zu suchen. Sie denken selbst der Verursacher ihrer Lage zu sein, oder vermuten, dass außenstehende Personen sie nicht verstehen werden und somit auch die Hilfe unterlassen wird \parencite{Gewaltmythen}.
 
 %Vergewaltigungmythen (Exit-Mythen)
 
