--- a/4 Ergebnisse/Ergebnisse.tex
+++ b/4 Ergebnisse/Ergebnisse.tex
@@ -9,17 +9,23 @@ Welche Variablen wurden alle
     \item https://www.youtube.com/watch?v=ZPoYMfx0aIY (Vorraussetzung für Pearson)
 \end{itemize}
 
+\section{Manipulationscheck}    \label{sec_4.2}
+dd
 
-\section{Inferenzstatistische Ergebnisse}    \label{sec_4.2}
+
+\section{Inferenzstatistische Ergebnisse}    \label{sec_4.3}
 Ergebnisse der Hypothesentests
 
-\subsection{Hypothese 1}    \label{subsec_4.2.1}
+
+\subsection{Hypothese 1}    \label{subsec_4.3.1}
 hier Vorraussetzungsergebnisse statistisch darlegen
 
-\subsection{Hypothese 2}    \label{subsec_4.2.2}
+
+\subsection{Hypothese 2}    \label{subsec_4.3.2}
 hier Vorraussetzungsergebnisse statistisch darlegen
 
-\subsection{Hypothese 3}    \label{subsec_4.2.3}
+
+\subsection{Hypothese 3}    \label{subsec_4.3.3}
 hier Vorraussetzungsergebnisse statistisch darlegen
 
 Moderation: 14.31\% der Varianz des DVMAS werden durch das Modell erklärt.
@@ -33,5 +39,5 @@ Da die obere Grenze einen größeren Wert als 0 aufweist, ist die Interaktion ni
 Eine Moderationsanalyse wurde durchgeführt, um zu bestimmen, ob die Interaktion zwischen Alter und Freizeit die Nutzung von sozialen Medien signifikant vorhersagt. Die Ergebnisse konnten keinen Moderationseffekt von Alter auf die Beziehung zwischen Freizeit auf Social Media-Nutzung finden, $\Delta R^{2}$ = 16.47\%, F(1, 96) = 18.93, p = .241, 95\% CI[-0.047, -0.015].
 
 
-\section{Explorative Ergebnisse}    \label{sec_4.3}
+\section{Explorative Ergebnisse}    \label{sec_4.4}
 
