--- a/Anhang.tex
+++ b/Anhang.tex
@@ -2,14 +2,14 @@
 \begin{appendices}
     \chapter*{Anhang A}
     \addcontentsline{toc}{chapter}{A}
-    \noindent \textit{Rad der Gewalt}
+    \noindent \textit{Titel von Anhang A}
     
-    \begin{figure}[htb]
-        \centering
-            \includegraphics[width=0.8\linewidth]{Rad der Gewalt.png}
-            \caption[Rad der Gewalt]{Rad der Gewalt \parencite{Rad_der_Gewalt}.}
-            \label{Rad der Gewalt}
-    \end{figure}
+    %\begin{figure}[htb]
+    %    \centering
+    %        \includegraphics[width=0.8\linewidth]{Rad der Gewalt.png}
+    %        \caption[Rad der Gewalt]{Rad der Gewalt \parencite{Rad_der_Gewalt}.}
+    %        \label{Rad der Gewalt}
+    %\end{figure}
 
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
