--- a/Quellen.bib
+++ b/Quellen.bib
@@ -516,3 +516,20 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   year            = {2016},
   doi             = {https://doi.org/10.1177/1362480615585399},
 }
+
+@article{Gewaltmythen,
+  author          = {Martín-Fernández, M. and Garcia, E. and Lila, M.},
+  journal         = {Psychosocial Intervention},
+  title           = {Assessing victim-blaming attitudes in cases of intimate partner violence against women: Development and validation of the VB-IPVAW scale},
+  volume          = {27},
+  pages           = {133-143},
+  year            = {2018},
+  doi             = {https://doi.org/10.5093/pi2018a18},
+}
+
+@phdthesis{Peters2003,
+  author      = {Peters, J.},
+  school      = {The University of Maine},
+  title       = {The domestic violence myth acceptance scale: Development and psychometric testing of a new instrument},
+  year        = {2003}
+}
