Methoden fertig und deskrip Ergebnisse

--- a/3 Methode/Histogramm Altersverteilung.tex
+++ b/3 Methode/Histogramm Altersverteilung.tex
@@ -1,7 +1,7 @@
 \begin{figure}[htb]
     \centering
         \includegraphics[width=0.8\linewidth]{Histogramm - Altersverteilung.png}
-        \caption[Histogramm Altersverteilung]{Histogramm für die Altersverteilung.}
+        \caption[Histogramm Altersverteilung]{Verteilung des Alters.}
         \label{Histogramm Altersverteilung}
 \end{figure}
 
