--- a/3 Methode/Methoden.tex
+++ b/3 Methode/Methoden.tex
@@ -8,15 +8,17 @@ Mittels eines Onlinefragbogens wurde die Stichprobe mit $N = 432$ erfasst. Mit $
 
 
 \section{Untersuchungsdesign}  \label{sec_3.2}
-Präregistrierung \\ %im Rahmen dessen gibt es weitere 4 Studien und NUR nennen was die erhoben
-Feld-Laborstudie\\
-genutzte Methode \\
-Design \\
-warum Online gemacht \\
-effekte\\
-randomiesiert und warum \\
-Anfallende Stichprobe (Ad-hoc-Stichprobe)
-quantitativer Forschungsansatz mittels Onlinefragbogen
+Die vorliegende Studie ist Teil eines größeren Forschungsprojektes, das weitere vier Arbeiten, mit ihren jeweiligen Schwerpunkten, beinhaltet. Jede dieser Arbeiten beschäftigte sich mit den Themen der häuslichen Gewalt und das der Gewaltmythen. Das Gesamtprojekt wurde der Ethikkommision vorgelegt und wurde präregistriert. 
+
+Vorraussetzung für die Teilhabe an der Umfrage waren ein internetfähiges Endgerät, die Erreichte Volljährigkeit und eine ausreichende Beherrschung der deutschen Sprache. 
+
+Für die Datengeneration wurde ein Onlinefragbogen erstellt, da dadurch eine weitreichendere und ökonomischere Erhebung gewährleistet werden konnte. Der Zugangslink wurde primär über die sozialen Netzwerke WhatsApp, Instagram, Facebook, Telegram und Signal verschickt, weshalb es sich um eine (\textbf{randomiesiert?}) anfallende Stichprobe handelt. 
+
+Bezüglich der Erhebungsmethode und -Design handelt es sich bei dieser Arbeit um eine quantitative Querschnittstudie, auf der Basis eines einzigen Messzeitpunktes.
+%Feld-Laborstudie\\
+%effekte\\
+%randomiesiert und warum \\
+%Anfallende Stichprobe (Ad-hoc-Stichprobe)
 
 
 \section{Operationalisierung der Konstrukte}    \label{sec_3.3}
@@ -28,24 +30,26 @@ Die Akzeptanz von häuslichen Gewaltmythen wurden mithilfe der deutschen Überse
 
 Das letzte erhobene Konstrukt Aggression wurde mithilfe des Deutschen Aggressionsfragebogens erfasst. Dieser umfasst 29 Items verteilt auf den folgenden vier Subskalen: physische Aggression, verbale Aggression, Ärger und Misstrauen. Die als Aussage formulierten Items wurden anhand einer vier-stufigen Likertskala von 1 = \enquote{trifft nich zu} bis 4 = \enquote{trifft voll zu} beantwortet. Die Validität des Fragebogens wurde durch die signifikante Korrelationen mit Aggressivität, generalisierter Selbstwert, Ärger, Ärgerkontrolle und Neurotizismus festgestellt. Die Reliabilität variiert zwischen \textalpha~=~.62 und \textalpha~=~.82 (Cronbachs-\textalpha der Subskalen) und weißt eine Retestreliabilität von Cronbachs-\textalpha~=~.73\parencite{Aggressionsfragebogen}.
 
-\textbf{Manipulationscheck}
-Fragestellung und Hypothesen
 
+%Fragestellung und Hypothesen hier dazwischen (Sophia)
 
 \section{Untersuchungsdurchführung}   \label{sec_3.4}
 Über den Zeitraum vom 04.06.2022 bis 27.06.2022 erstreckte sich die Datenerhebung. Der über SoSci-Survey erstellte Fragebogen wurde primär über den Messenger-Dienst WhatsApp, aber auch über Instagram, Facebook, Signal und Telegram verbreitet, mit der Bitte der Verbreitung, um eine möglichst große Stichprobe zu erreichen. Die Mindeststichprobengröße von 395 wurde mithilfe des kostenlosen Tools G*Power ermittelt. %G*Power (https://bjoernwalther.com/eine-kurze-einfuehrung-in-gpower/)
 
-Im Einführungstext, zu Beginn der Befragung, wurden Auskünfte über die 15 minütige Bearbeitungszeit, wie auch die garantierte Anonymität der Probanden aufgeklärt. Die Teilnehmer wurden zudem darauf hingewiesen, dass die Teilnahme der Befragung freiwillige ist. Bevor auf die nächste Seite weitergeklickt werden konnte, wurde mithilfe einer zu beantworteten Frage sichergestellt, dass die Person den Einleitungstext verstanden hat und mit der Befragung einverstanden ist. Auf der anschließenden Seite folgte die Aufgabenerklärung für die Fallvignetten, wie eine kleine Aufklärung diesbezüglich. Jeweils nach jeder dargebotener Vignette folgten vier Fragen, zur überprüfung der Manipulation, die bereits in ~\ref{sec_3.3} aufgefasst wurden. Anschließend folgten die deutsche Übersetzung des DVMAS und der Deutsche Aggressionsfragebogen. Zum Schluss wurden die Probanden gebeten einige kurze Angaben zu ihrer Person zu geben, woraufhin eine letzte Nachfrage der gewissenhaften Durchführung folgte. Damit endete der für die Forschenden wichtige Teil der Befragung. Auf einer daran anschließenden Seite wurden Informationen und Kontaktdaten für Betroffene von häuslicher Gewalt gewährleistet. 
+Im Einführungstext, zu Beginn der Befragung, wurden Auskünfte über die 15 minütige Bearbeitungszeit, wie auch die garantierte Anonymität der Probanden aufgeklärt. Die Teilnehmer wurden zudem darauf hingewiesen, dass die Teilnahme der Befragung freiwillige ist. Bevor auf die nächste Seite weitergeklickt werden konnte, wurde mithilfe einer zu beantworteten Frage sichergestellt, dass die Person den Einleitungstext verstanden hat und mit der Befragung einverstanden ist. Auf der anschließenden Seite folgte die Aufgabenerklärung für die Fallvignetten, wie eine kleine Aufklärung diesbezüglich. Jeweils nach jeder dargebotener Vignette folgten vier Fragen, zur überprüfung der Manipulation. Anschließend folgten die deutsche Übersetzung des DVMAS und der Deutsche Aggressionsfragebogen. Zum Schluss wurden die Probanden gebeten einige kurze Angaben zu ihrer Person zu geben, woraufhin eine letzte Nachfrage der gewissenhaften Durchführung folgte. Damit endete der für die Forschenden wichtige Teil der Befragung. Auf einer daran anschließenden Seite wurden Informationen und Kontaktdaten für Betroffene von häuslicher Gewalt gewährleistet. 
 
 Potenzielle Störvariablen konnten während der Untersuchungsdurchführung nicht kontrolliert werden. Anhand der Onlinebefragung lag die Entscheidung, zu welchem Zeitpunkt, an welchem Ort und unter welchen Bedingungen die Befragung bearbeitet wurde, bei den Teilnehmern selbst.
 
 
 \section{Auswertungsmethode}    \label{sec_3.5}
-SPSS ausgewertet \\ %was umgepolt wurde: Variablen wurden so umkodiert, dass der betroffenen Person stets der Zahlenwert 101 sprich der vollen Verantwortung zugeschrieben wurde (GP2,3,6    GS1,4,7) + Aggro 14,22
-% Vorbereitung der Daten: wieviele wurden rausgeschmissen
-deskriptive \\ % Lage, Streuung, Median, Modus, Mittelwert, SD
-hypothesen \\ % das aus präregistrierung: gerichtet, unterschied, tests
-% H3, weil Moderatorviariable hat wurde auf SPSS mit dem plug-in PROCESS berechnet
-erwähnen, dass Vorraussetzung gibt und werden später geprüft
+Der erhobene Datensatz wurde mithilfe der Statistik- und Analysesoftware SPSS berechnet. Bevor die Hypothesen jedoch berechnet werden konnten, musste der Datensatz bereinigt werden. So, wie die Fallvignetten im Fragebogen konzipiert war, musste der Datensatz verdoppelt werden, damit mit den Daten der Vignetten gerechnet werden konnte. 
 
-auf 1-2 items eingehen wenn über FB geschrieben wird
+Anschließend konnten die Daten ausgewertet werden, beginnend mit den deskriptiven Kennzahlen drei Konstrukte. Anhand der Lageparameter, der Maße der Streuung und der Verteilung konnten die demographischen Daten der Stichprobe ausgewertet werden.
+
+Damit die Fallvignetten wie auch der Aggressionsfragebogen für die Berechnungen genutzt werden konnte, mussten jeweils einige Items umgepolt werden. Damit bei den Vignetten den betroffenen Person stets der Zahlenwert 101 (Schieberegler rechts) zugeordnet wird, wurden jeweils bei den psychischen und sexualisierten Vignetten drei Fälle umkodiert. Ferner beinhalteten die Vignetten weitere Variablen, die für die Auswertung bei dieser Arbeit, wie auch bei den Auswertungen der weiteren Projektmitglieder wichtig waren. Für die individuelle Verwendung dieser, wurden sie aus den entsprechenden Fallvignetten extrahiert, jeweils zu einer separaten dummy-kodierten Variable dichotomisiert. Beim Aggressionsfragebogen wurden Item 14 "Ich bin eine ausgeglichene Person." und Item 22 "Ich kann mir keinen Grund vorstellen, weshalb ich jemals eine andere Person schlagen würde." umgepolt.
+
+Die in Kapitel ~\ref{sec_3.4} bereits erwähnten Manipulationschecks wurden mithilfe des Chi$^2$-Tests berechnet.
+
+Zur Beantwortung der ersten beiden Hypothese (H1 und H2) wurde eine Pearson-Moment-Korrelationen berechnet. Bei der H1 wurde eine positive Korrelationen zwischen dem Aggressionsscore und der Verantwortungszuschreibung auf das Opfer untersucht. Für die H2 wurde die positive Korrelationen des Aggressionsscores mit der Akzeptanz von Gewaltmythen untersucht. Voraussetzungen für diesen Test sind, die Intervallskalierung oder Dichotomie beider Variablen, eine bestehende Linearität, die Abwesenheit von Ausreißern, sowie die Endlichkeit der Varianz bzw. Kovarianz.
+
+Bei der dritten Hypothese (H3) handelte es sich um eine Moderationsanalyse, die mithilfe des Plug-in PROCESS berechnet wurde. Untersucht wurde bei dieser Hypothese ob das Geschlecht den Zusammenhang zwischen Akzeptanz von Gewaltmythen und Aggression moderiert. Die allgemeinen Vorraussetzung für diesen Test sind die Linearität und der Stichprobenumfang. Des Weiteren gibt es spezifische Voraussetzungen. Eine gegebene Homoskedastizität, Normalverteilung des Fehlers, keine Autokorrelation und keine Multikolinearität müssen gegeben sein.
