--- a/4 Ergebnisse/Ergebnisse.tex
+++ b/4 Ergebnisse/Ergebnisse.tex
@@ -1,13 +1,22 @@
 \chapter{Ergebnisse}   \label{ch_4}
-Statistische Hypthesenprüfung
+Im folgenden Kapitel werden die durchgeführten statistischen Berechnungen dargestellt. Zu Beginn werden die deskriptiven Ergebnisse beschrieben und mit den Normwerten verglichen, woraufhin die statistische Überprüfung der Manipulation folgt. Im inferenzstatistischen Unterkapitel wird mit der Prüfung der Vorraussetzung der einzelnen Test mathematisch dargestellt und abschließend werden die Ergebnisse der drei Hypothesen präsentiert. Die ausführliche Interpretation der Ergebnisse geschieht im nachkommenden Kapitel ~\ref{ch_5}.
 
 \section{Deskriptive Ergebnisse}    \label{sec_4.1}
-Welche Variablen wurden alle
-\begin{itemize}
-    \item Streudigramm für Pearson Korrelationskoefizienten
-    \item generell Voraussetzungen für die Tests
-    \item https://www.youtube.com/watch?v=ZPoYMfx0aIY (Vorraussetzung für Pearson)
-\end{itemize}
+Die Fallvignetten wießen, bei einem $Min$~=~1 und einem $Max$~=~101, einen Mittelwert von $M$~=~26.46 ($SD$~=~27.98) auf. Der Median lag bei $Mdn$~=~19. Bei einer Schiefe von 1.17 und Kurtosis von 0.53, liegt eine rechstschiefe bzw. linkssteile und steilgipflige Verteilung vor. Abbildung~\ref{Histogramm VicBlame} stellt die multimodale Verteilung der Verantwortungszuschreibung bildlich da. %Aus dem Boxplot sind zudem ein paar milde Ausreißerwerte zu entnehmen.
+% Modus
+\input{4 Ergebnisse/Histogramm Vignetten.tex}
+
+Der DVMAS zeigte einen Mittelwert von $M$~=~2.60 ($SD$~=~0.80) und einen Median von $Mdn$~=~2.5. Der geringste Wert war dabei $Min$~=~1 und der höchsete $Max$~=~5.56. Eine Schiefe von 0.60 bildet eine leicht rechstschiefe Verteilung. Die Kurtosis von 0.09 bildet eine leicht steilere Verteilung, als die Normalverteilung. Beide Werte weichen demzufolge leicht von einer Normalverteilung ab. Die Abbildung~\ref{Histogramm DVMAS} bildet die beschriebenen Werte bildlich ab. %Aus dem Boxplot sind zudem ein paar milde Ausreißerwerte zu entnehmen.
+% Normwerte
+% Modus
+\input{4 Ergebnisse/Histogramm DVMAS.tex}
+
+Beim Deutschen Aggressionsfragebogen wurde ein Mittelwert von $M$~=~1.88 ($SD$~=~0.43) und ein Median von $Mdn$~=~1.79 berechnet. Der geringste angegebene Wert betrug $Min$~=~1.10 und der höchste $Max$~=~3.52. Die Verteilung wies einen Schiefe von 0.94 und eine Kurtosis von 0.88 auf. Demzufolge ist die Verteilung rechstschiefe und hat eine breitgipflige Form, sowie eine Multimodalität. In Abbildung~\ref{Histogramm AggroFB} ist eine bildliche Darstellung der Verteilung zu sehen.
+\input{4 Ergebnisse/Histogramm AggroFB.tex}
+% Ausreißer
+% Normwerte
+% Modus
+
 
 \section{Manipulationscheck}    \label{sec_4.2}
 dd
@@ -19,10 +28,12 @@ Ergebnisse der Hypothesentests
 
 \subsection{Hypothese 1}    \label{subsec_4.3.1}
 hier Vorraussetzungsergebnisse statistisch darlegen
+% https://www.youtube.com/watch?v=ZPoYMfx0aIY (Vorraussetzung für Pearson)
 
 
 \subsection{Hypothese 2}    \label{subsec_4.3.2}
 hier Vorraussetzungsergebnisse statistisch darlegen
+% https://www.youtube.com/watch?v=ZPoYMfx0aIY (Vorraussetzung für Pearson)
 
 
 \subsection{Hypothese 3}    \label{subsec_4.3.3}
