--- a/4 Ergebnisse/Ergebnisse.tex
+++ b/4 Ergebnisse/Ergebnisse.tex
@@ -2,24 +2,35 @@
 Im folgenden Kapitel werden die durchgeführten statistischen Berechnungen dargestellt. Zu Beginn werden die deskriptiven Ergebnisse beschrieben und mit den Normwerten verglichen, woraufhin die statistische Überprüfung der Manipulation folgt. Im inferenzstatistischen Unterkapitel wird mit der Prüfung der Vorraussetzung der einzelnen Test mathematisch dargestellt und abschließend werden die Ergebnisse der drei Hypothesen präsentiert. Die ausführliche Interpretation der Ergebnisse geschieht im nachkommenden Kapitel ~\ref{ch_5}.
 
 \section{Deskriptive Ergebnisse}    \label{sec_4.1}
-Die Fallvignetten wießen, bei einem $Min$~=~1 und einem $Max$~=~101, einen Mittelwert von $M$~=~26.46 ($SD$~=~27.98) auf. Der Median lag bei $Mdn$~=~19. Bei einer Schiefe von 1.17 und Kurtosis von 0.53, liegt eine rechstschiefe bzw. linkssteile und steilgipflige Verteilung vor. Abbildung~\ref{Histogramm VicBlame} stellt die multimodale Verteilung der Verantwortungszuschreibung bildlich da. %Aus dem Boxplot sind zudem ein paar milde Ausreißerwerte zu entnehmen.
-% Modus
+Die Fallvignetten wießen, bei einem $Min$~=~1 und einem $Max$~=~101, einen Mittelwert von $M$~=~26.46 ($SD$~=~27.98) auf. Der Median lag bei $Mdn$~=~19. Die am häufigsten verteilten Werte liegen an den beiden Extremen bei 1.00 und 101.00 und bilden eine bimodale Verteilung. Bei einer Schiefe von 1.17 und Kurtosis von 0.53, liegt eine rechstschiefe bzw. linkssteile und steilgipflige Verteilung vor. Abbildung~\ref{Histogramm VicBlame} stellt die unimodale Verteilung der Verantwortungszuschreibung bildlich da. Die vorhandenen Ausreißer befinden sich alle unter der Ausscheidungsgrenze.
+% Modus: 1.00 und 101.00
 \input{4 Ergebnisse/Histogramm Vignetten.tex}
 
-Der DVMAS zeigte einen Mittelwert von $M$~=~2.60 ($SD$~=~0.80) und einen Median von $Mdn$~=~2.5. Der geringste Wert war dabei $Min$~=~1 und der höchsete $Max$~=~5.56. Eine Schiefe von 0.60 bildet eine leicht rechstschiefe Verteilung. Die Kurtosis von 0.09 bildet eine leicht steilere Verteilung, als die Normalverteilung. Beide Werte weichen demzufolge leicht von einer Normalverteilung ab. Die Abbildung~\ref{Histogramm DVMAS} bildet die beschriebenen Werte bildlich ab. %Aus dem Boxplot sind zudem ein paar milde Ausreißerwerte zu entnehmen.
-% Normwerte
-% Modus
+Der DVMAS zeigte einen Mittelwert von $M$~=~2.60 ($SD$~=~0.80) und einen Median von $Mdn$~=~2.5. Der geringste Wert war dabei $Min$~=~1 und der höchsete $Max$~=~5.56. Die häufigsten Werte lagen bei 2.11 und 2.67 und bilden eine bimodale Verteilung. Eine Schiefe von 0.60 bildet eine leicht rechstschiefe Verteilung. Die Kurtosis von 0.09 bildet eine leicht steilere Verteilung, als die Normalverteilung. Beide Werte weichen demzufolge leicht von einer Normalverteilung ab ($M$~=~2.30, $SD$~=~0.85 und Schiefe~=~0.63). 
+Die Abbildung~\ref{Histogramm DVMAS} bildet die beschriebenen Werte dieser Studie bildlich ab. Die vorhandenen Ausreißer befinden sich alle unter der Ausscheidungsgrenze.
+% Modus: 2.11, 2.67
 \input{4 Ergebnisse/Histogramm DVMAS.tex}
 
-Beim Deutschen Aggressionsfragebogen wurde ein Mittelwert von $M$~=~1.88 ($SD$~=~0.43) und ein Median von $Mdn$~=~1.79 berechnet. Der geringste angegebene Wert betrug $Min$~=~1.10 und der höchste $Max$~=~3.52. Die Verteilung wies einen Schiefe von 0.94 und eine Kurtosis von 0.88 auf. Demzufolge ist die Verteilung rechstschiefe und hat eine breitgipflige Form, sowie eine Multimodalität. In Abbildung~\ref{Histogramm AggroFB} ist eine bildliche Darstellung der Verteilung zu sehen.
 \input{4 Ergebnisse/Histogramm AggroFB.tex}
-% Ausreißer
-% Normwerte
-% Modus
+Beim Deutschen Aggressionsfragebogen wurde ein Mittelwert von $M$~=~1.88 ($SD$~=~0.43) und ein Median von $Mdn$~=~1.79 berechnet. Der geringste angegebene Wert betrug $Min$~=~1.10 und der höchste $Max$~=~3.52. Die Verteilung wies einen Schiefe von 0.94 und eine Kurtosis von 0.88 auf. Demzufolge ist die Verteilung rechstschiefe und hat eine breitgipflige Form, sowie eine Multimodalität mit den Modiwerten bei 1.59, 1.62, 2.52 und 2.55. Die Lageparameter weichen stark von den Normwerten ab. Diese sind wie folgt: $M$~=~2.66 ($SD$~=~0.88), Schiefe~=~3.81 und eine Kurtosis von -0.06. In Abbildung~\ref{Histogramm AggroFB} ist eine bildliche Darstellung der erhobenen Verteilung zu sehen. Die vorhandenen Ausreißer befinden sich alle unter der Ausscheidungsgrenze.
+% Modus: 1.59, 1.62, 2.52, 2.55
 
 
 \section{Manipulationscheck}    \label{sec_4.2}
-dd
+Nachfolgend werden die Ergebnisse der vier Manipulationschecks in der folgenden Reihenfolge aufgeführt: Gewaltart, Geschlecht des Opfers, soziökonomischer Status der betroffenen Person und abschließend der Kulturelle Hintergrund.
+Wie zuvor erklärt, musste der Datensatz verdoppelt werden, um eine berechnung mit den Daten gewährleisten zu können. Aus diesem Grund wird in diesem und den nachfolgenden Kapiteln von einer Stichprobengröße von $N_{neu}$~=~864 ausgegangen.
+
+Bei der Überprüfung der Gewaltart gaben bei Vignetten sexualisierter Gewalt 354 Personen (91.70\%) an eine solche Gewaltart behandelt zu haben. Handelte es sich um eine psychische Gewaltart an, reichten nur 400 Personen (83.70\%) die richtige Antwort ein. Der durchgeführte Chi$^2$-Test viel mit einem Wert von 485.53 signifikant aus ($p<$.001). 
+
+War die Nachfrage auf das Geschlecht des Opfers gerichtet gaben die 411 (96.70\%) bzw. 423 (96.40\%) Probanden an, es handelte sich um ein weibliches bzw. männliches Opfer. Auch dieser Chi$^2$-Test war mit einem Wert von 748.16 hoch signifikant ($p<$.001). 
+
+
+Die Überprüfung des niedrigen soziökonomischen Status des Opfers wurde von 389 (80.2\%) bei dessen Gegebenheit richtig beanwortet. Bei der gegenteiligen Situation stieg die Rate der richtigen Antworten auf 342 (90.20\%). Mit einem Wert von 422.37 fiel dieser Chi$^2$-Test ebenfalls signifikant aus ($p<$.001). 
+
+Die höchste Rate an Richtigkeit gab es bei dem Manipulationscheck des kulturellen Status. Hier gaben 422 (97.70\%) Personen bzw. 423 (97.90\%) die richtige Antwort. Auch dieser Chi$^2$-Test ist mit einem Wert von 789.68 signifikant ($p<$.001). 
+
+\input{4 Ergebnisse/Kreuztabelle.tex}
+In Tabelle ~\ref{Kreuztabelle} sind die Werte dieser Manipulationsprüfung nochmals zusammengefasst.
 
 
 \section{Inferenzstatistische Ergebnisse}    \label{sec_4.3}
@@ -29,15 +40,33 @@ Ergebnisse der Hypothesentests
 \subsection{Hypothese 1}    \label{subsec_4.3.1}
 hier Vorraussetzungsergebnisse statistisch darlegen
 % https://www.youtube.com/watch?v=ZPoYMfx0aIY (Vorraussetzung für Pearson)
+metrische Skalen beider Variablen
+keine Ausreißer
+linearer Zusammenhang zwischen Variablen
+Bivariate Normalverteilung -> zentralen Grenzwertsatz heranziehen/ mit Bootstraping arbeiten
 
 
 \subsection{Hypothese 2}    \label{subsec_4.3.2}
 hier Vorraussetzungsergebnisse statistisch darlegen
 % https://www.youtube.com/watch?v=ZPoYMfx0aIY (Vorraussetzung für Pearson)
+metrische Skalen beider Variablen
+keine Ausreißer
+linearer Zusammenhang zwischen Variablen
+Bivariate Normalverteilung -> zentralen Grenzwertsatz heranziehen/ mit Bootstraping arbeiten
 
 
 \subsection{Hypothese 3}    \label{subsec_4.3.3}
 hier Vorraussetzungsergebnisse statistisch darlegen
+%https://statistikguru.de/spss/moderation/voraussetzungen-14.html 
+Linearität
+Normalverteilung der Residuen (unwichtig, weil SP groß)
+Homoskedastizität -> Schätzfehler über alle vorhergesagten y-Werte relativ gleich
+Unabhängigkeit
+
+
+
+
+
 
 Moderation: 14.31\% der Varianz des DVMAS werden durch das Modell erklärt.
 Modell erklärt tatsächlich etwas, weil p kleiner .01 ist.
