--- a/4 Ergebnisse/Histogramm Vignetten.tex
+++ b/4 Ergebnisse/Histogramm Vignetten.tex
@@ -1,7 +1,7 @@
 \begin{figure}[htb]
     \centering
         \includegraphics[width=0.8\linewidth]{Histogramm - VicBlame.png}
-        \caption[Histogramm Altersverteilung]{Verteilung der Verantwortungszuschreibung.}
+        \caption[Histogramm Verantwortungszuschreibung]{Verteilung der Verantwortungszuschreibung.}
         \label{Histogramm VicBlame}
 \end{figure}
 
