--- a/4 Ergebnisse/Histogramm AggroFB.tex
+++ b/4 Ergebnisse/Histogramm AggroFB.tex
@@ -1,7 +1,7 @@
-\begin{figure}[htb]
+\begin{figure}[htb!]
     \centering
         \includegraphics[width=0.8\linewidth]{Histogramm - AggroFB.png}
-        \caption[Histogramm Altersverteilung]{Verteilung der Angaben des Aggressionsfragebogens.}
+        \caption[Histogramm Aggressionsfragebogen]{Verteilung der Angaben des Aggressionsfragebogens.}
         \label{Histogramm AggroFB}
 \end{figure}
 
